Changed OpenApi from 3 to 2. Started Model
Why would somebody downgrade openApi 3 specification to swagger 2, you probably thinking reading this commit. Let me explain 
OpenApi 3 is cool, powerful modern and you know, modern.
As far I got it became new standard only in 2017, so the libraries used in this project not really support it.
Flassgerr is having beta support. It looks like it works until you start validating. Validator is hardcoded to parse version 2 only.
You probably thinking, you could monkey patch it, or parse it by yourself and pass to jsonSchema which is in the package. So did I. Don’t make my mistakes!
Parsing references by yourself is a pain in the neck.
I hear you saying “why would you do so? There should be a library that made it for you.” Good luck searching. However, do not forget carefully read the docs if came across of something like prance. At the moment of this commit it kinda supports OpenApi 3. Which means it doesn’t.
It’s sluggish and doesn’t take integers as keys. Which you would very like describing your responses.

Swagger 2 is great
